# logs-parser

./: .gitignore  README.md  debug.py  docker-compose.yml  main.py  main_analyzer.py  main_client.py  main_gui.py  main_parser.py  pyproject.toml  requirements.txt
LogsAnalyzer/: analyzer.py  plots.py
Mongodb/: config.py  models.py
ParserLogs/: filewriter.py  filter.py  logs_reader.py  logs_writer.py  logstructure.py  parser.py
docs/: UML LogsParser.drawio  context diagram.drawio  АКД Подсистема анализа логов.drawio
gui/: design.py  main.ui  main_app.py
logs_analyzer/: analyzer.py  plots.py
logs_parser/: python_callables.py
logs_parser/analyzer/: analyzer.py
mongodb/: config.py  models.py
notebooks/: experiment.ipynb
parser_logs/: log_structure.py  logs_reader.py  logs_writer.py  parser.py
scripts/: split_logs.py  unite_logs.py
tests/: fix_logs.py
