[tool.poetry]
name = "logs_parser"
version = "0.1.0"
description = "logs parser for web analitics"
authors = ["DieNice <DailyPlanning@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
IP2Location = "^8.6.2"
mongoengine = "^0.23.1"
matplotlib = "^3.4.3"
pandas = "^1.3.3"
Pillow = "^8.4.0"
PyQt5 = "^5.15.4"
click = "^8.0.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
